past websites dont make eyes bleed nearly as much. Fixed backgrounds

--- a/My_personal_site/Past_Projects/Tourist_page/style.css
+++ b/My_personal_site/Past_Projects/Tourist_page/style.css
@@ -1,3 +1,7 @@
+body {
+	background-image: url(Images/concrete_seamless.png);
+}
+
 .hide {
     display: none;
 }
@@ -48,7 +52,7 @@ nav h1 {
 }
 
 #search-bar input {
-    background-color: rgb(237, 237, 237);
+    background-color: white;
     padding: .5em;
     padding-left: 2em;
     border: none;
@@ -68,7 +72,7 @@ nav h1 {
     text-align: right;
     padding: .1em .5em;
     font-size: 2.5em;
-    background-color: rgb(237, 237, 237);
+    background-color: ghostwhite;
     color: rgb(97, 97, 97);
 }
 
@@ -419,7 +423,7 @@ article p {
 }
 
 #sub-box {
-    background-color: rgb(241, 241, 241);
+    background-color: ghostwhite;
     padding: 1em;
     text-align: center;
 }
@@ -449,7 +453,8 @@ article p {
 /*****Footer*****/
 
 footer {
-    background-color: rgb(241, 241, 241);
+    background-color: ghostwhite;
+	padding-top: .5;
 }
 
 footer p {
